--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minty </title>
   <link rel="stylesheet" href="/css/style.css"></link>
+  <link rel="icon" href="/assets/logo/logo.png">
 </head>
 <body>
   <div class="container" id="animationScreen">
