Removed animations, working on the main part of the ui

--- a/index.html
+++ b/index.html
@@ -5,27 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minty </title>
   <link rel="stylesheet" href="/css/style.css"></link>
-  <link rel="icon" href="/assets/logo/logo.png">
+  <link rel="icon" href="/assets/logo/logo500_500.png.png">
 </head>
 <body>
-  <div class="container" id="animationScreen">
-    <h1 id="welcome" class="fade">Welcome to</h1>
-    <h1 id="minty" class="fade">Minty</h1>
-
-    <div id="questionBox" class="fade">
-      <p>Have you been here before?</p>
-      <button id="yesButton">Yes</button>
-      <button id="noButton">No</button>
-    </div>
-  </div>
-
-  <div id="mainContent">
-    <div class="search-container">
-      <img src="/assets/logo/logo.png" width="250" height="250">
-      <br>
-      <br>
-      <input type="text" placeholder="Search the web" id="searchBox">
-    </div>
+  <div class="search-container">
+    <img src="/assets/logo/logo500_500.png.png" width="250" height="250">
+    <br>
+    <br>
+    <input type="text" placeholder="Search the web" id="searchBox">
   </div>
   <script src="/javascript/main.js"></script>
 </body>
