--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minty </title>
   <link rel="stylesheet" href="/css/style.css"></link>
-  <link rel="icon" href="/assets/logo/logo500_500.png.png">
+  <link rel="icon" href="/assets/logo/logo500_500.png">
 </head>
 <body>
   <div class="search-container">
-    <img src="/assets/logo/logo500_500.png.png" width="250" height="250">
+    <img src="/assets/logo/logo500_500.png" width="250" height="250">
     <br>
     <br>
     <input type="text" placeholder="Search the web" id="searchBox">
